fixed vertical scrollbar

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -16,6 +16,7 @@ body {
     font-size: 1.6rem;
     height: 100%;
     color: rgba(0, 0, 0, 0.87);
+    overflow-y: scroll;
 }
 
 // =============QUERIES==============
